integration_tests/codegen_fail/fail/scalar/derive_wrong_url.rs
#[derive(juniper::GraphQLScalarValue)]
#[graphql(specified_by_url = "not an url")]
struct ScalarSpecifiedByUrl(i64);

fn main() {}
